// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert default 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      Default is set to news type, and have default onDismiss function that hides the alert.
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert default at bottom 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      Default is set to news type, and have default onDismiss function that hides the alert.
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert extended style 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c2 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c2 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c2:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c2 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c2:not(:disabled):hover,
.c2:not(:disabled).hovered,
.c2:not(:disabled):active,
.c2:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c2:not(:disabled):hover .icon,
.c2:not(:disabled).hovered .icon,
.c2:not(:disabled):active .icon,
.c2:not(:disabled).active .icon,
.c2:not(:disabled):focus .icon,
.c2:not(:disabled).focused .icon {
  color: #3498db;
}

.c2:not(:disabled).active,
.c2:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c2:focus,
.c2.focused {
  outline: none;
}

.c2.focus-visible,
.c2.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

.c1 {
  -webkit-transform: rotate(5deg);
  -ms-transform: rotate(5deg);
  transform: rotate(5deg);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0 c1"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      Extended with 'transform: rotate(5deg)'
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c2 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c3"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert non dismissable 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      I can't be dismissed!
    </p>
  </div>
</div>
`;

exports[`Storyshots Alert type attention 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f1c618;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #2f313a;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="ATTENTION"
  >
    <p>
      Attention alert!
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type negative 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dd3311;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEGATIVE"
  >
    <p>
      Negative alert!
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type news 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      New alert!
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert type positive 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2ecc71;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="POSITIVE"
  >
    <p>
      Positive alert!
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert visibleTime 2 seconds 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 2500;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0"
    data-testid="alert-content"
    type="NEWS"
  >
    <p>
      This message will self-destruct in 2 seconds
    </p>
    <div
      className="dismiss-button"
    >
      <button
        className="c1 undefined   "
        data-testid="alert-dismiss"
        onClick={[Function]}
        type="button"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-0px)",
            }
          }
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height={32}
              viewBox="4 4 32 32"
              width={32}
            >
              <path
                d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        <span />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert with custom z-index 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c1 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: transparent;
  color: #59636f;
  border: none;
  box-shadow: none;
}

.c1 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c1:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c1 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c1:not(:disabled):hover,
.c1:not(:disabled).hovered,
.c1:not(:disabled):active,
.c1:not(:disabled).active {
  background-color: rgba(0,0,0,0.04);
  color: #3498db;
  box-shadow: none;
  padding: 4px 4px;
}

.c1:not(:disabled):hover .icon,
.c1:not(:disabled).hovered .icon,
.c1:not(:disabled):active .icon,
.c1:not(:disabled).active .icon,
.c1:not(:disabled):focus .icon,
.c1:not(:disabled).focused .icon {
  color: #3498db;
}

.c1:not(:disabled).active,
.c1:not(:disabled):active {
  box-shadow: none;
  background-color: rgba(0,0,0,0.08);
}

.c1:focus,
.c1.focused {
  outline: none;
}

.c1.focus-visible,
.c1.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3498db;
  box-shadow: 0 2px 2px 0 rgba(46,204,113,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  min-height: 72px;
  z-index: 11;
}

.c0 > p {
  font-family: Lato,sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  text-align: center;
  color: #ffffff;
  margin: 0;
}

.c0 > .dismiss-button {
  position: absolute;
  top: 50%;
  margin-top: -16px;
  right: 24px;
}

.c0 > .dismiss-button:hover .icon {
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "height": 200,
      "transform": "scale(1)",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "background": "gray",
          "height": 120,
          "position": "absolute",
          "width": 120,
          "zIndex": 10,
        }
      }
    />
    <div
      style={
        Object {
          "background": "rgba(0, 0, 0, 0.7)",
          "height": 100,
          "position": "absolute",
          "width": 100,
          "zIndex": 12,
        }
      }
    />
    <div
      className="c0"
      data-testid="alert-content"
      type="NEWS"
    >
      <p>
        should display between the two
      </p>
      <div
        className="dismiss-button"
      >
        <button
          className="c1 undefined   "
          data-testid="alert-dismiss"
          onClick={[Function]}
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c2"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={32}
                viewBox="4 4 32 32"
                width={32}
              >
                <path
                  d="M21.414 20l4.243 4.243a1 1 0 11-1.414 1.414L20 21.414l-4.243 4.243a1 1 0 11-1.414-1.414L18.586 20l-4.243-4.243a1 1 0 111.414-1.414L20 18.586l4.243-4.243a1 1 0 111.414 1.414L21.414 20z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
    </div>
  </div>
</div>
`;
